<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <HorizontalScrollView
        android:id="@+id/inputFieldScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:layout_weight="5">

        <TextView
            android:id="@+id/inputField"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end|center"
            android:text="@string/default_input_field_text"
            android:textSize="45sp"
            android:textColor="@color/colorInputText"
            android:textIsSelectable="true"
            />
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/clearAllButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/clear_all_button_text"
                android:background="@color/colorTextChangeButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/backspaceButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/backspace_button_text"
                android:textSize="30sp"
                android:background="@color/colorTextChangeButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/changeNegationButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/change_negation_button_text"
                android:textSize="30sp"
                android:background="@color/colorTextChangeButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/plusButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plus_button_text"
                android:textSize="30sp"
                android:background="@color/colorOperationButton"
                android:layout_margin="5dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/sevenButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/seven_button_text"
                android:textSize="30sp"
                android:background="@color/colorRegularButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/eightButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/eight_button_text"
                android:textSize="30sp"
                android:background="@color/colorRegularButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/nineButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nine_button_text"
                android:textSize="30sp"
                android:background="@color/colorRegularButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/minusButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/minus_button_text"
                android:textSize="30sp"
                android:background="@color/colorOperationButton"
                android:layout_margin="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/fourButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/four_button_text"
                android:textSize="30sp"
                android:background="@color/colorRegularButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/fiveButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/five_button_text"
                android:textSize="30sp"
                android:background="@color/colorRegularButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/sixButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/six_button_text"
                android:textSize="30sp"
                android:background="@color/colorRegularButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/multiplyButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/multiply_button_text"
                android:textSize="30sp"
                android:background="@color/colorOperationButton"
                android:layout_margin="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/oneButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/one_button_text"
                android:textSize="30sp"
                android:background="@color/colorRegularButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/twoButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/two_button_text"
                android:textSize="30sp"
                android:background="@color/colorRegularButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/threeButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/three_button_text"
                android:textSize="30sp"
                android:background="@color/colorRegularButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/divideButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/divide_button_text"
                android:textSize="30sp"
                android:background="@color/colorOperationButton"
                android:layout_margin="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/zeroButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zero_button_text"
                android:textSize="30sp"
                android:background="@color/colorRegularButton"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/dotButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dot_button_text"
                android:textSize="30sp"
                android:background="@color/colorRegularButton"
                android:layout_margin="5dp"
                />
            <Space
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:id="@+id/equalsButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/equals_button_text"
                android:textSize="30sp"
                android:background="@color/colorOperationButton"
                android:layout_margin="5dp"
                />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>